Small Code improvements